Small screen fixes
- Fix overflowing images
- Fix post nav alignment

--- a/src/_includes/scss/main.scss
+++ b/src/_includes/scss/main.scss
@@ -8,6 +8,11 @@ body {
     padding: 1rem 2rem;
 }
 
+img {
+    height: auto;
+    max-width: 100%;
+}
+
 figure {
     margin-left: 0;
     margin-right: 0;
