--- a/src/_includes/scss/partials/_post-nav.scss
+++ b/src/_includes/scss/partials/_post-nav.scss
@@ -4,4 +4,6 @@
     list-style: none;
     margin-top: 5rem;
     padding: 0;
+
+    .prev { text-align: right; }
 }
